feat: added load multiple vector dbs